--- a/Makefile.win
+++ b/Makefile.win
@@ -1,7 +1,7 @@
 # Project: tp1
 # Compiler: Default GCC compiler
 # Compiler Type: MingW 3
-# Makefile created by wxDev-C++ IDE 7.4.2.569 on 16/04/15 12:48
+# Makefile created by wxDev-C++ IDE 7.4.2.569 on 16/04/15 16:44
 
 WXLIBNAME = wxmsw29u
 CPP       = g++.exe
@@ -36,17 +36,17 @@ clean: clean-custom
 $(BIN): $(OBJ)
 	$(LINK) $(LINKOBJ) -o "$(BIN)" $(LIBS) 
 
-Objects/MingW/App.o: $(GLOBALDEPS) App.cpp App.h Frame.h Menu.h PanelMenu.h PanelCores.h
+Objects/MingW/App.o: $(GLOBALDEPS) App.cpp
 	$(CPP) -c App.cpp -o Objects/MingW/App.o $(CXXFLAGS)
 
-Objects/MingW/Frame.o: $(GLOBALDEPS) Frame.cpp Frame.h Menu.h PanelMenu.h PanelCores.h
+Objects/MingW/Frame.o: $(GLOBALDEPS) Frame.cpp
 	$(CPP) -c Frame.cpp -o Objects/MingW/Frame.o $(CXXFLAGS)
 
-Objects/MingW/Menu.o: $(GLOBALDEPS) Menu.cpp Menu.h
+Objects/MingW/Menu.o: $(GLOBALDEPS) Menu.cpp
 	$(CPP) -c Menu.cpp -o Objects/MingW/Menu.o $(CXXFLAGS)
 
-Objects/MingW/PanelMenu.o: $(GLOBALDEPS) PanelMenu.cpp PanelMenu.h
+Objects/MingW/PanelMenu.o: $(GLOBALDEPS) PanelMenu.cpp
 	$(CPP) -c PanelMenu.cpp -o Objects/MingW/PanelMenu.o $(CXXFLAGS)
 
-Objects/MingW/PanelCores.o: $(GLOBALDEPS) PanelCores.cpp PanelCores.h
+Objects/MingW/PanelCores.o: $(GLOBALDEPS) PanelCores.cpp
 	$(CPP) -c PanelCores.cpp -o Objects/MingW/PanelCores.o $(CXXFLAGS)
