--- a/Makefile.win
+++ b/Makefile.win
@@ -1,14 +1,14 @@
 # Project: tp1
 # Compiler: Default GCC compiler
 # Compiler Type: MingW 3
-# Makefile created by wxDev-C++ IDE 7.4.2.569 on 16/04/15 16:44
+# Makefile created by wxDev-C++ IDE 7.4.2.569 on 16/04/15 17:54
 
 WXLIBNAME = wxmsw29u
 CPP       = g++.exe
 CC        = gcc.exe
 WINDRES   = "windres.exe"
-OBJ       = Objects/MingW/App.o Objects/MingW/Frame.o Objects/MingW/Menu.o Objects/MingW/PanelMenu.o Objects/MingW/PanelCores.o
-LINKOBJ   = "Objects/MingW/App.o" "Objects/MingW/Frame.o" "Objects/MingW/Menu.o" "Objects/MingW/PanelMenu.o" "Objects/MingW/PanelCores.o"
+OBJ       = Objects/MingW/App.o Objects/MingW/Frame.o Objects/MingW/Menu.o Objects/MingW/PanelMenu.o Objects/MingW/PanelCores.o Objects/MingW/DrawPanel.o
+LINKOBJ   = "Objects/MingW/App.o" "Objects/MingW/Frame.o" "Objects/MingW/Menu.o" "Objects/MingW/PanelMenu.o" "Objects/MingW/PanelCores.o" "Objects/MingW/DrawPanel.o"
 LIBS      = -L"C:/Program Files/Dev-Cpp/lib/wx/gcc_lib" -L"C:/Program Files/Dev-Cpp/lib" -L"C:/Program Files/Dev-Cpp/MinGW32/lib" -mwindows -l$(WXLIBNAME) -l$(WXLIBNAME)_gl -lwxscintilla -lwxtiff -lwxjpeg -lwxpng -lwxzlib -lwxregexu -lwxexpat -lkernel32 -luser32 -lgdi32 -lcomdlg32 -lwinspool -lwinmm -lshell32 -lcomctl32 -lole32 -loleaut32 -luuid -lrpcrt4 -ladvapi32 -lwsock32 -lodbc32 -lopengl32  -g3 
 INCS      = -I"C:/Program Files/Dev-Cpp/MinGW32/include"
 CXXINCS   = -I"C:/Program Files/Dev-Cpp/MinGW32/include" -I"C:/Program Files/Dev-Cpp/" -I"C:/Program Files/Dev-Cpp/include/common"
@@ -36,17 +36,20 @@ clean: clean-custom
 $(BIN): $(OBJ)
 	$(LINK) $(LINKOBJ) -o "$(BIN)" $(LIBS) 
 
-Objects/MingW/App.o: $(GLOBALDEPS) App.cpp
+Objects/MingW/App.o: $(GLOBALDEPS) App.cpp App.h Frame.h Menu.h PanelMenu.h PanelCores.h DrawPanel.h
 	$(CPP) -c App.cpp -o Objects/MingW/App.o $(CXXFLAGS)
 
-Objects/MingW/Frame.o: $(GLOBALDEPS) Frame.cpp
+Objects/MingW/Frame.o: $(GLOBALDEPS) Frame.cpp Frame.h Menu.h PanelMenu.h PanelCores.h DrawPanel.h
 	$(CPP) -c Frame.cpp -o Objects/MingW/Frame.o $(CXXFLAGS)
 
-Objects/MingW/Menu.o: $(GLOBALDEPS) Menu.cpp
+Objects/MingW/Menu.o: $(GLOBALDEPS) Menu.cpp Menu.h
 	$(CPP) -c Menu.cpp -o Objects/MingW/Menu.o $(CXXFLAGS)
 
-Objects/MingW/PanelMenu.o: $(GLOBALDEPS) PanelMenu.cpp
+Objects/MingW/PanelMenu.o: $(GLOBALDEPS) PanelMenu.cpp PanelMenu.h
 	$(CPP) -c PanelMenu.cpp -o Objects/MingW/PanelMenu.o $(CXXFLAGS)
 
-Objects/MingW/PanelCores.o: $(GLOBALDEPS) PanelCores.cpp
+Objects/MingW/PanelCores.o: $(GLOBALDEPS) PanelCores.cpp PanelCores.h
 	$(CPP) -c PanelCores.cpp -o Objects/MingW/PanelCores.o $(CXXFLAGS)
+
+Objects/MingW/DrawPanel.o: $(GLOBALDEPS) DrawPanel.cpp DrawPanel.h
+	$(CPP) -c DrawPanel.cpp -o Objects/MingW/DrawPanel.o $(CXXFLAGS)
