--- a/Makefile.win
+++ b/Makefile.win
@@ -1,7 +1,7 @@
 # Project: tp1
 # Compiler: Default GCC compiler
 # Compiler Type: MingW 3
-# Makefile created by wxDev-C++ IDE 7.4.2.569 on 17/04/15 11:56
+# Makefile created by wxDev-C++ IDE 7.4.2.569 on 24/04/15 18:20
 
 WXLIBNAME = wxmsw29u
 CPP       = g++.exe
@@ -9,10 +9,10 @@ CC        = gcc.exe
 WINDRES   = "windres.exe"
 OBJ       = Objects/MingW/App.o Objects/MingW/Frame.o Objects/MingW/Menu.o Objects/MingW/PanelMenu.o Objects/MingW/PanelCores.o Objects/MingW/DrawPanel.o
 LINKOBJ   = "Objects/MingW/App.o" "Objects/MingW/Frame.o" "Objects/MingW/Menu.o" "Objects/MingW/PanelMenu.o" "Objects/MingW/PanelCores.o" "Objects/MingW/DrawPanel.o"
-LIBS      = -L"C:/Program Files (x86)/Dev-Cpp/lib/wx/gcc_lib" -L"C:/Program Files (x86)/Dev-Cpp/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW32/lib" -mwindows -l$(WXLIBNAME) -l$(WXLIBNAME)_gl -lwxscintilla -lwxtiff -lwxjpeg -lwxpng -lwxzlib -lwxregexu -lwxexpat -lkernel32 -luser32 -lgdi32 -lcomdlg32 -lwinspool -lwinmm -lshell32 -lcomctl32 -lole32 -loleaut32 -luuid -lrpcrt4 -ladvapi32 -lwsock32 -lodbc32 -lopengl32  -g3 
-INCS      = -I"C:/Program Files (x86)/Dev-Cpp/MinGW32/include"
-CXXINCS   = -I"C:/Program Files (x86)/Dev-Cpp/MinGW32/include" -I"C:/Program Files (x86)/Dev-Cpp/" -I"C:/Program Files (x86)/Dev-Cpp/include/common"
-RCINCS    = --include-dir "C:/PROGRA~2/Dev-Cpp/include/common"
+LIBS      = -L"C:/Program Files/Dev-Cpp/lib/wx/gcc_lib" -L"C:/Program Files/Dev-Cpp/lib" -L"C:/Program Files/Dev-Cpp/MinGW32/lib" -mwindows -l$(WXLIBNAME) -l$(WXLIBNAME)_gl -lwxscintilla -lwxtiff -lwxjpeg -lwxpng -lwxzlib -lwxregexu -lwxexpat -lkernel32 -luser32 -lgdi32 -lcomdlg32 -lwinspool -lwinmm -lshell32 -lcomctl32 -lole32 -loleaut32 -luuid -lrpcrt4 -ladvapi32 -lwsock32 -lodbc32 -lopengl32  -g3 
+INCS      = -I"C:/Program Files/Dev-Cpp/MinGW32/include"
+CXXINCS   = -I"C:/Program Files/Dev-Cpp/MinGW32/include" -I"C:/Program Files/Dev-Cpp/" -I"C:/Program Files/Dev-Cpp/include/common"
+RCINCS    = --include-dir "C:/PROGRA~1/Dev-Cpp/include/common"
 BIN       = Output/MingW/tp1.exe
 DEFINES   = -D__WXMSW__ -D__GNUWIN32__ -D_UNICODE
 CXXFLAGS  = $(CXXINCS) $(DEFINES)   -g3
@@ -51,5 +51,5 @@ Objects/MingW/PanelMenu.o: $(GLOBALDEPS) PanelMenu.cpp PanelMenu.h
 Objects/MingW/PanelCores.o: $(GLOBALDEPS) PanelCores.cpp PanelCores.h
 	$(CPP) -c PanelCores.cpp -o Objects/MingW/PanelCores.o $(CXXFLAGS)
 
-Objects/MingW/DrawPanel.o: $(GLOBALDEPS) DrawPanel.cpp DrawPanel.h
+Objects/MingW/DrawPanel.o: $(GLOBALDEPS) DrawPanel.cpp Frame.h Menu.h PanelMenu.h PanelCores.h DrawPanel.h
 	$(CPP) -c DrawPanel.cpp -o Objects/MingW/DrawPanel.o $(CXXFLAGS)
